--- a/css/styles.css
+++ b/css/styles.css
@@ -188,7 +188,7 @@ footer p{
     /* font-size: 16px; */
   }
   .col-md-3 img{
-    width:100%px;
+    width:100%;
     margin: 20px;
   }
   #portfolio{
@@ -214,7 +214,7 @@ footer p{
     font-size: 20px;
   }
   .col-md-3 img{
-    width:100%px;
+    width:100%;
     margin: 20px;
   }
   #portfolio{
